Обновил HTML и CSS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 <body>
 <div class="video-container">
-<video autoplay loop muted class="bg-video">
+<video autoplay loop muted playsinline
+ class="bg-video">
     <source src="images/banneerr1.mp4" type="video/mp4">
 </video>
 
@@ -30,10 +31,12 @@
 </div>
 
 <section class="partners_block">
- <video autoplay loop muted class="video509">
+ <video autoplay loop muted playsinline
+ class="video509">
      <source src="images/509.MOV" type="video/mp4">
  </video>
- <video autoplay loop muted class="video500">
+ <video autoplay loop muted playsinline
+ class="video500">
      <source src="images/500.MP4" type="video/mp4">
  </video>
 <div class="content_2">
