--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="rus">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
+<body>
 <header>
 <nav>
       <ul>
@@ -17,18 +18,17 @@
     </nav>
 </header>
 
-<body>
 <div class="video-container">
 <video autoplay loop muted playsinline
  class="bg-video">
-    <source src="images/banneerr1.mp4" type="video/mp4">
+    <source src="images/rest3bunner.mp4" type="video/mp4">
 </video>
-
+</div>
 <div class="content"><h1>COCA!NE</h1>
 <hr>
-<h2>ALL EYEZ ON YOU</h2>
+<h2>ALL EYES ON YOU</h2>
 </div>
-</div>
+
 
 <section class="partners_block">
  <video autoplay loop muted playsinline
@@ -43,33 +43,26 @@
     <h3>Откройте для себя новые возможности сотрудничества с COCA!NE.</h3>
     <p>Мы предлагаем партнёрам уникальный опыт взаимодействия с брендом премиальной классической женской одежды, где инновационные решения и высокое качество становятся залогом успешного развития вашего бизнеса. Сотрудничество с COCA!NE открывает доступ к эксклюзивным коллекциям, гибким условиям партнёрства и поддержке на всех этапах реализации совместных проектов.</p>
 </div>
-<div class="contact">
+</section>
+ <div class="contact">
     <a href="https://t.me/cocaineyou" target="_blank" rel="noopener noreferrer">
   Подписаться на наш Telegram
 </a>
 </div>
-</section>
-<hr>
+
 <footer>
     <div class="footer_content">
+     <nav class="footer-social">
+      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="https://www.instagram.com/coca.women?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a>
+      <a href="https://www.twitter.com/">Twitter</a>
+    </nav>
     <div class="footer_info">
         <p>Адрес: ул. Примерная, 1, Одесса, Украина</p>
         <p>Телефон: +3(093)1177337 | Email: info@cocawomen.com</p>
         <p>&copy; 2025 Coca Women. Все права защищены.</p>
     </div>
-<div class="footer-links">
-      <a href="/privacy-policy.html">Политика конфиденциальности</a>
-      <a href="/terms.html">Условия использования</a>
-      <a href="/contact.html">Контакты</a>
-    </div>
-<div class="footer-social">
-      <a href="https://www.facebook.com/">Facebook</a>
-      <a href="https://www.instagram.com/">Instagram</a>
-      <a href="https://www.twitter.com/">Twitter</a>
-    </div>
     </div>
 </footer>
-
-
 </body>
 </html>
