--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div class="wrapper">
 <header>
 <nav>
       <ul>
@@ -64,5 +65,6 @@
     </div>
     </div>
 </footer>
+</div>
 </body>
 </html>
